Wait for EMS to boot until starting engine.

--- a/public/assets/checklists/n934gr.md
+++ b/public/assets/checklists/n934gr.md
@@ -77,6 +77,7 @@
 * Beacon: On
 * Throttle: Pump 0-4
 * Throttle: 1/8" Open
+* Engine Monitor: Wait for Boot
 * Propeller Area: Clear
 * Starter: Engage
 * Throttle: 1000 RPM
