Add Skyview display reset to emergency procedures.

--- a/public/assets/checklists/n934gr.md
+++ b/public/assets/checklists/n934gr.md
@@ -317,3 +317,7 @@
 * Hijacking: 7500
 * Radio Failure: 7600
 * Mayday: 7700
+
+## Restart Skyview Display
+
+* Press buttons 1, 2, 5 on affected screen
